--- a/jason.html
+++ b/jason.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prep for xm</title>
+    <p>hi boos</p>
+    <p>come to your dad</p>
 </head>
 <body>
     
